<resources>
    <string name="app_name">Programacion Multimedia</string>
    <string name="form_username">Nombre</string>
    <string name="form_email">Correo</string>
    <string name="form_phone">Teléfono</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="michelangelo_buonarroti"><b>Michelangelo Buonarroti</b></string>
    <string name="caprese_6_marzo_1475">Caprese 6 marzo 1475</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_username">Nombre: %1$s</string>
    <string name="drawer_email">Email: %1$s</string>
    <string name="drawer_phone">Teléfono: %1$s</string>

    <string name="menu_biography">BIOGRAFÍA</string>
    <string name="menu_sculpture">ESCULTURA</string>
    <string name="menu_painting">PINTURA</string>
    <string name="menu_architecture">ARQUITECTURA</string>
    <string name="menu_options">OPCIONES</string>
    <string name="menu_help">AYUDA</string>
    <string name="menu_search">BÚSQUEDA</string>
    <string name="menu_exit">SALIDA</string>

    <string name="arch_numColegiado">Número de colegiado: %1$s</string>
    <string name="arch_nombre">Nombre: %1$s</string>
    <string name="arch_especialidad">Especialidad: %1$s</string>
    <string name="arch_estaActivo">Está activo: %1$s</string>
    <string name="arch_fechaNacimiento">Fecha de nacimiento: %1$s</string>

    <string name="volver">Volver</string>
    <string name="iniciar">Iniciar</string>

</resources>